--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 WAKATIME_API_KEY=your_wakatime_api_key # Get it from https://wakatime.com/settings/account
 
-NODEMAILER_USER=""
-NODEMAILER_PASS=""
+RESEND_API_KEY=your_resend_api_key_here
+FROM_EMAIL=your_verified@domain.com
+TO_EMAIL=your@email.com
