--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.10.0",
-        "@radix-ui/react-dialog": "^1.1.7",
-        "@radix-ui/react-dropdown-menu": "^2.1.7",
-        "@radix-ui/react-label": "^2.1.3",
-        "@radix-ui/react-slot": "^1.2.0",
-        "@radix-ui/react-toast": "^1.2.7",
-        "@radix-ui/react-tooltip": "^1.2.0",
+        "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-dropdown-menu": "^2.1.15",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-toast": "^1.2.14",
+        "@radix-ui/react-tooltip": "^1.2.7",
         "@react-email/render": "^0.0.12",
         "@types/nodemailer": "^6.4.17",
         "@vercel/analytics": "^1.5.0",
@@ -29,23 +29,24 @@
         "nodemailer": "^6.10.1",
         "react": "19.0.0",
         "react-dom": "19.0.0",
-        "react-hook-form": "^7.55.0",
+        "react-hook-form": "^7.57.0",
+        "resend": "^4.5.2",
         "sonner": "^1.7.4",
         "swr": "^2.3.3",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "vaul": "^0.9.9",
         "velite": "^0.1.1",
-        "zod": "^3.24.2"
+        "zod": "^3.25.63"
     },
     "devDependencies": {
-        "@types/node": "^20.17.30",
+        "@types/node": "^20.19.0",
         "@types/react": "19.0.2",
         "@types/react-dom": "19.0.2",
         "autoprefixer": "^10.4.21",
         "eslint": "^8.57.1",
         "eslint-config-next": "15.1.3",
-        "postcss": "^8.5.3",
+        "postcss": "^8.5.5",
         "tailwindcss": "^3.4.17",
         "typescript": "^5.8.3"
     },
