--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "@radix-ui/react-toast": "^1.2.15",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@react-email/render": "^0.0.12",
+        "@react-three/drei": "^10.7.7",
+        "@react-three/fiber": "^9.4.0",
         "@types/nodemailer": "^6.4.21",
         "@vercel/analytics": "^1.5.0",
         "@vercel/speed-insights": "^1.2.0",
@@ -25,7 +27,7 @@
         "cmdk": "^1.1.1",
         "lucide-react": "^0.363.0",
         "next": "15.1.3",
-        "next-themes": "^0.3.0",
+        "next-themes": "^0.4.6",
         "nodemailer": "^6.10.1",
         "react": "19.0.0",
         "react-dom": "19.0.0",
@@ -35,6 +37,7 @@
         "swr": "^2.3.6",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
+        "three": "^0.181.2",
         "vaul": "^1.1.2",
         "velite": "^0.1.1",
         "zod": "^3.25.76"
